--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=recepcionEquipos
 spring.datasource.url:jdbc:mysql://localhost:3306/servicespc?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8
 spring.datasource.username: root
 spring.datasource.password: root
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql:true
 spring.jpa.hibernate.ddl-auto: update
